--- a/index.html
+++ b/index.html
@@ -10,6 +10,35 @@
 </head>
 
 <body>
+    <header>
+        <span>Tähän tulee ylätuuniste (header)</span>
+    </header>
+
+    <nav>
+        <span>Tähän tulee navigointipalkki (nav)</span>
+    </nav>
+
+    <main class="parent">
+
+        <section>
+            <span>Tähän lisätän osa (section)</span>
+            <article class="mb1">
+                <span>Tähän lisätän artikkeli (article)</span>
+            </article>
+            <article>
+                <span>Tähän toinen artikkeli (article)</span>
+            </article>
+        </section>
+
+        <aside>
+            <span>Tähän lisätän sivupalkki (aside)</span>
+        </aside>
+
+    </main>
+
+    <footer>
+        <span>Tähän lisätän alatunniste (footer)</span>
+    </footer>
 
 </body>
 
